build/log/idf_py_stdout_output_10232
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/mixer.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/mixer.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"C:/Users/Bharath Mohan/aura-synth-firmware/build/config" -I"C:/Users/Bharath Mohan/aura-synth-firmware/main" -IC:/esp/v6.0/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0/esp-idf/components/freertos/config/include -IC:/esp/v6.0/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/v6.0/esp-idf/components/heap/include -IC:/esp/v6.0/esp-idf/components/heap/tlsf -IC:/esp/v6.0/esp-idf/components/log/include -IC:/esp/v6.0/esp-idf/components/soc/include -IC:/esp/v6.0/esp-idf/components/soc/esp32 -IC:/esp/v6.0/esp-idf/components/soc/esp32/include -IC:/esp/v6.0/esp-idf/components/soc/esp32/register -IC:/esp/v6.0/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0/esp-idf/components/hal/esp32/include -IC:/esp/v6.0/esp-idf/components/hal/include -IC:/esp/v6.0/esp-idf/components/esp_rom/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32 -IC:/esp/v6.0/esp-idf/components/esp_common/include -IC:/esp/v6.0/esp-idf/components/esp_system/include -IC:/esp/v6.0/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0/esp-idf/components/esp_stdio/include -IC:/esp/v6.0/esp-idf/components/xtensa/esp32/include -IC:/esp/v6.0/esp-idf/components/xtensa/include -IC:/esp/v6.0/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/esp32/include -IC:/esp/v6.0/esp-idf/components/lwip/include -IC:/esp/v6.0/esp-idf/components/lwip/include/apps -IC:/esp/v6.0/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0/esp-idf/components/lwip/port/include -IC:/esp/v6.0/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v6.0/esp-idf/components/driver/i2c/include -IC:/esp/v6.0/esp-idf/components/driver/touch_sensor/include -IC:/esp/v6.0/esp-idf/components/driver/twai/include -IC:/esp/v6.0/esp-idf/components/driver/touch_sensor/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2c/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2c/include -IC:/esp/v6.0/esp-idf/components/esp_hal_twai/include -IC:/esp/v6.0/esp-idf/components/esp_hal_twai/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_touch_sens/esp32/include -IC:/esp/v6.0/esp-idf/components/esp_hal_touch_sens/include -IC:/esp/v6.0/esp-idf/components/esp_driver_i2s/include -IC:/esp/v6.0/esp-idf/components/esp_driver_gpio/include @"C:/Users/Bharath Mohan/aura-synth-firmware/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 "-fmacro-prefix-map=C:/Users/Bharath Mohan/aura-synth-firmware=." -fmacro-prefix-map=C:/esp/v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/mixer.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\mixer.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/mixer.c.obj -c "C:/Users/Bharath Mohan/aura-synth-firmware/main/mixer.c"
C:/Users/Bharath Mohan/aura-synth-firmware/main/mixer.c: In function 'mixer_process':
C:/Users/Bharath Mohan/aura-synth-firmware/main/mixer.c:144:27: error: implicit declaration of function 'powf' [-Wimplicit-function-declaration]
  144 |             float speed = powf(2.0f, (float)snap->drum.slot / 12.0f);
      |                           ^~~~
C:/Users/Bharath Mohan/aura-synth-firmware/main/mixer.c:17:1: note: include '<math.h>' or provide a declaration of 'powf'
   16 | #include "esp_log.h"
  +++ |+#include <math.h>
   17 | 
C:/Users/Bharath Mohan/aura-synth-firmware/main/mixer.c:144:27: error: incompatible implicit declaration of built-in function 'powf' [-Werror=builtin-declaration-mismatch]
  144 |             float speed = powf(2.0f, (float)snap->drum.slot / 12.0f);
      |                           ^~~~
C:/Users/Bharath Mohan/aura-synth-firmware/main/mixer.c:144:27: note: include '<math.h>' or provide a declaration of 'powf'
cc1.exe: all warnings being treated as errors
[2/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D "C:\Users\Bharath Mohan\aura-synth-firmware\build\bootloader" && C:\Espressif\tools\python\v6.0\venv\Scripts\python.exe C:/esp/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "C:/Users/Bharath Mohan/aura-synth-firmware/build/bootloader/bootloader.bin""
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
